# mjlab_manipulation

./: .gitignore  README.md  pyproject.toml
src/mjlab_manipulation/: __init__.py
src/mjlab_manipulation/objects/: __init__.py
src/mjlab_manipulation/objects/avocado/: model.json  model.xml
src/mjlab_manipulation/objects/avocado/visual/: material.mtl
src/mjlab_manipulation/objects/banana/: model.json  model.xml
src/mjlab_manipulation/objects/bowl/: model.json  model.xml
src/mjlab_manipulation/objects/can/: model.json  model.xml
src/mjlab_manipulation/objects/cup/: model.json  model.xml
src/mjlab_manipulation/objects/kiwi/: model.json  model.xml
src/mjlab_manipulation/objects/lemon/: model.json  model.xml
src/mjlab_manipulation/objects/mug/: model.json  model.xml
src/mjlab_manipulation/objects/orange/: model.json  model.xml
src/mjlab_manipulation/objects/peach/: model.json  model.xml
src/mjlab_manipulation/objects/pear/: model.json  model.xml
src/mjlab_manipulation/objects/tomato/: model.json  model.xml
src/mjlab_manipulation/robots/: __init__.py  tools.py
src/mjlab_manipulation/robots/droid/: droid_constants.py
src/mjlab_manipulation/robots/gen3/: gen3_constants.py
src/mjlab_manipulation/robots/kuka/: kuka_constants.py
src/mjlab_manipulation/robots/ur5e/: ur5e_constants.py
src/mjlab_manipulation/robots/xarm/: xarm_constants.py
src/mjlab_manipulation/tasks/lift/: __init__.py  env_cfgs.py  rl_cfg.py
src/mjlab_manipulation/tasks/lift_any/: __init__.py  env_cfgs.py
src/mjlab_manipulation/tasks/reach/: __init__.py  env_cfgs.py
(+8 files in other folders)
